kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiii-project
  labels:
    name: kiii-project
