kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-springboot-deployment
  namespace: kiii-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiii-springboot-pod
  template:
    metadata:
      labels:
        app: kiii-springboot-pod
    spec:
      containers:
        - name: kiii-springboot
          resources:
            limits:
              memory: '1Gi'
              cpu: '500m'
          image: halid99/java_app:1.0.0
          imagePullPolicy: Always
          command: ["java"]
          args: ["-Dspring.config.location=file:/app/config/application.properties","-Dspring.profiles.active=prod", "-jar", "lab-0.0.1-SNAPSHOT.jar"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kiii-springboot-configmap-volume
              mountPath: /app/config/application.properties
      volumes:
        - name: kiii-springboot-configmap-volume
          configMap:
            name: kiii-springboot-configmap
