kubernetes/postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  labels:
    app: postgres
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: database
  clusterIP: None
