kubernetes/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kiii-postgres
  namespace: kiii-project
spec:
  serviceName: pg-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: kiii-project
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: kiii-postgres-vol
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: kiii-postgres-vol
          persistentVolumeClaim:
            claimName: kiii-postgres-vol
---
apiVersion: v1
kind: Service
metadata:
  name: kiii-postgres-svc
  namespace: kiii-project
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
