kubernetes/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiii-project-springboot-service
  namespace: kiii-project
  annotations:
    ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  selector:
    app: kiii-springboot-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiii-project-ingress
  annotations:
#    ngnix.ingress.kubernetes.io/rewrite-target: /$1
  namespace: kiii-project
spec:
  rules:
    - host: kii-project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kiii-project-springboot-service
                port:
                  number: 8080
